# Volunteer-Assignment-and-Coordination-Platform

./: .gitignore  COMMIT_MESSAGE.txt  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: django-ci.yml
core/: models.py  serializers.py  urls.py  views.py
core/management/commands/: create_admin_user.py
core/migrations/: 0001_initial.py
volunteer_platform/: config.py  settings.py  urls.py
volunteer_platform/core/: exceptions.py  renderers.py
volunteer_platform/utils/: pagination.py
